--- a/index.html
+++ b/index.html
@@ -22,12 +22,36 @@
                     <li><a href="#" class="in-box">make reservation</a></li>
                 </ul>
             </nav>
-            <main>
+            <div class="mainly">
                 <p class="welcome">welcome</p>
                 <p class="name">the fiasco</p>
                 <p class="description">MEDITERRANEAN SPECIALITIES</p>
-            </main>
+            </div>
         </div>
     </header>
+    <main>
+        <div class="container">
+            <div class="article">
+                <div class="image-box"></div>
+                <div class="txt">
+                    <hr>
+                    <h1>Discover</h1>
+                    <h2>OUR GASTRONOMY</h2>
+                    <p>Attending a trade show can be a very effective method of promoting your company and its products. And one of the most effective ways to optimize your trade show display and increase traffic to your booth is through the use of banner stands. </p>
+                    <a href="#">see more ></a>
+                </div>
+            </div>
+            <div class="article right-content">
+                <div class="image-box"></div>
+                <div class="txt">
+                    <hr>
+                    <h1>Tasteful</h1>
+                    <h2>RECIPES MADE WITH LOVE</h2>
+                    <p>Classified advertising is a form of advertising that is particularly common in newspapers and other periodicals. A classified is usually textually based and can consist of as little as the type of item being sold, and a contact number to call for more information</p>
+                    <a href="#">see more ></a>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
