--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="article">
                 <div class="image-box"></div>
                 <div class="txt">
-                    <hr>
+                    <hr class="sep">
                     <h1>Discover</h1>
                     <h2>OUR GASTRONOMY</h2>
                     <p>Attending a trade show can be a very effective method of promoting your company and its products. And one of the most effective ways to optimize your trade show display and increase traffic to your booth is through the use of banner stands. </p>
@@ -44,13 +44,76 @@
             <div class="article right-content">
                 <div class="image-box"></div>
                 <div class="txt">
-                    <hr>
+                    <hr class="sep">
                     <h1>Tasteful</h1>
                     <h2>RECIPES MADE WITH LOVE</h2>
                     <p>Classified advertising is a form of advertising that is particularly common in newspapers and other periodicals. A classified is usually textually based and can consist of as little as the type of item being sold, and a contact number to call for more information</p>
                     <a href="#">see more ></a>
                 </div>
             </div>
+            <section class="menu">
+                <div class="en-tete">
+                    <hr class="sep middle-sep">
+                    <h1>Menu</h1>
+                    <h2>CERTIFIED BIO</h2>
+                    <p>Classified advertising is a form of advertising that is particularly common in newspapers and other periodicals. A classified is usually textually based and can consist of as little as the type of item being sold, and a contact number to call for more information</p>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#" class="active">eggs</a></li>
+                        <li><a href="#">porc</a></li>
+                        <li><a href="#">chicken</a></li>
+                        <li><a href="#">fish</a></li>
+                        <li><a href="#">vegan</a></li>
+                    </ul>
+                </nav>
+                <div class="principal">
+                    <div class="line">
+                        <div class="part ">
+                            <div class="img-box">
+                                <img src="images/crusted-chicken-square.jpg">
+                            </div>
+                            <div class="txt">
+                                <h2>Amazing Crusted Chicken</h2>
+                                <p>Beryl Cook is one of Britain's most talented and amusing artists .Beryl's pictures feature women of all shapes and sizes enjoying themselves</p>
+                                <span class="price">$20</span>
+                            </div>
+                        </div>
+                        <div class="part right">
+                            <div class="img-box">
+                                <img src="images/bobun-light-square.jpg">
+                            </div>
+                            <div class="txt">
+                                <h2>BoBun Light Odd</h2>
+                                <p>Beryl Cook is one of Britain's most talented and amusing artists .Beryl's pictures feature women of all shapes and sizes enjoying themselves</p>
+                                <span class="price">$20</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="line">
+                        <div class="part ">
+                            <div class="img-box">
+                                <img src="images/poisson-square.jpg">
+                            </div>
+                            <div class="txt">
+                                <h2>Amazing Crusted Chicken</h2>
+                                <p>Beryl Cook is one of Britain's most talented and amusing artists .Beryl's pictures feature women of all shapes and sizes enjoying themselves</p>
+                                <span class="price">$20</span>
+                            </div>
+                        </div>
+                        <div class="part right">
+                            <div class="img-box">
+                                <img src="images/paella-square.jpg">
+                            </div>
+                            <div class="txt">
+                                <h2>BoBun Light Odd</h2>
+                                <p>Beryl Cook is one of Britain's most talented and amusing artists .Beryl's pictures feature women of all shapes and sizes enjoying themselves</p>
+                                <span class="price">$20</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 </body>
