partie bas du menu principal terminer

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <div class="image-box"></div>
                 <div class="txt">
                     <hr class="sep">
-                    <h1>Discover</h1>
-                    <h2>OUR GASTRONOMY</h2>
+                    <h1 class="titre-jaune">Discover</h1>
+                    <h2 class="sous-titre">OUR GASTRONOMY</h2>
                     <p>Attending a trade show can be a very effective method of promoting your company and its products. And one of the most effective ways to optimize your trade show display and increase traffic to your booth is through the use of banner stands. </p>
                     <a href="#">see more ></a>
                 </div>
@@ -45,8 +45,8 @@
                 <div class="image-box"></div>
                 <div class="txt">
                     <hr class="sep">
-                    <h1>Tasteful</h1>
-                    <h2>RECIPES MADE WITH LOVE</h2>
+                    <h1 class="titre-jaune">Tasteful</h1>
+                    <h2 class="sous-titre">RECIPES MADE WITH LOVE</h2>
                     <p>Classified advertising is a form of advertising that is particularly common in newspapers and other periodicals. A classified is usually textually based and can consist of as little as the type of item being sold, and a contact number to call for more information</p>
                     <a href="#">see more ></a>
                 </div>
@@ -113,6 +113,19 @@
                         </div>
                     </div>
                 </div>
+            </section>
+            <section class="foot">
+                <div class="txt">
+                    <hr class="sep">
+                    <h1 class="titre-jaune">Chef</h1>
+                    <h2 class="sous-titre">MEET OUR EXECUTIVE CHEF, CHRISTIAN JACOB</h2>
+                    <p>
+                    If you are considering purchasing a new grill, or barbecue, you willbe faced with a multitude of options to choose between. However,there is one choice which you will need to make fairly quickly inyour quest for the perfect grill for you. That decision is whether tobuy a charcoal or gas grill.
+
+                    Wow I have a hankering for some really good grill roasted chicken,the melt in your mouth variety with some fresh homemade salsaslathered right on top.
+                    </p>
+                </div>
+                <div class="image-box"></div>
             </section>
         </div>
     </main>
