last commit pour ce jour projet non terminer

--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
                 <div class="image-box"></div>
             </section>
         </div>
+        <section class="reservation">
+            <div class="content">
+                <div class="txt">
+                    <hr class="sep">
+                    <h1 class="titre-jaune">Reservation</h1>
+                    <h2 class="sous-titre">make a reservation</h2>
+                    <p>Classified advertising is a form of advertising that is particularly common in newspapers and other periodicals. A classified is usually textually based and can consist.</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
