partie reservation terminer

--- a/index.html
+++ b/index.html
@@ -136,6 +136,17 @@
                     <h2 class="sous-titre">make a reservation</h2>
                     <p>Classified advertising is a form of advertising that is particularly common in newspapers and other periodicals. A classified is usually textually based and can consist.</p>
                 </div>
+                <form >
+                    <input type="text" placeholder="Full name" class="data">
+                    <select class="data">
+                        <option value="for 2 persons">for 2 persons</option>
+                        <option value="for 3 persons">for 3 persons</option>
+                        <option value="for 4 persons">for 4 persons</option>
+                        <option value="for 5 persons">for 5 persons</option>
+                    </select>
+                    <input type="date" class="data">
+                </form>
+                <button>Reserve table</button>
             </div>
         </section>
     </main>
