--- a/index.html
+++ b/index.html
@@ -149,6 +149,31 @@
                 <button>Reserve table</button>
             </div>
         </section>
+        <section class="recette">
+            <div class="top">
+                <hr class="sep">
+                <h1 class="titre-jaune">Recipes</h1>
+                <h2 class="sous-titre">WE SHARE OUR RECIPES WITH YOU</h2>
+                <p>If you are considering purchasing a new grill, or barbecue, you will be faced with a multitude of options to choose between. However, there is one choice which you will need.</p>
+            </div>
+            <div class="tableau">
+                <table>
+                    <tr>
+                        <td class="date">29 sep</td>
+                        <td class="description">Chopped, sliced or wedged, hard-cooked eggs are the basis of egg salad and add protein and a happy glow to tossed and composed salads and casseroles.</td>
+                    </tr>
+                    <tr>
+                        <td class="date">30 sep</td>
+                        <td class="description">Chopped, sliced or wedged, hard-cooked eggs are the basis of egg salad and add protein and a happy glow to tossed and composed salads and casseroles.</td>
+                    </tr>
+                    <tr>
+                        <td class="date">31 sep</td>
+                        <td class="description">Chopped, sliced or wedged, hard-cooked eggs are the basis of egg salad and add protein and a happy glow to tossed and composed salads and casseroles.</td>
+                    </tr>
+                </table>
+            </div>
+            <a href="#" class="more">Go to our blog ></a>
+        </section>
     </main>
 </body>
 </html>
